fixed nav links on mobile

--- a/src/Components/Organisms/Header/header.css
+++ b/src/Components/Organisms/Header/header.css
@@ -10,6 +10,10 @@
     height: 100%
 }
 
+.nav-seventy-wide {
+    width: 50%;
+}
+
 .nav-fifty-wide {
     width: 30%;
 }
